--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* PopX App Design System - Mobile Interface */
+/* PopX App Design System - Mobile Interface //update */
 
 @layer base {
   :root {
